--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -1,5 +1,4 @@
+spring.application.name=netflix-eureka-naming-server
 server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-#eureka.instance.preferIpAddress=true
-#spring.cloud.loadbalancer.ribbon.enabled=false
