spring cloud learning

--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.application.name=config-server
+#Server port
+server.port = 8888
+
+#Git repo location (local repo url)
+spring.cloud.config.server.git.uri=C:\\Munish\\work\\config-server-repo
+ 
+#Verify any repository issue in service startup
+spring.cloud.config.server.git.cloneOnStart=true
+ 
+#Disable security of the Management endpoint
+management.security.enabled=false
 
