--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.application.name=netflix-eureka-naming-server
+spring.application.name=discovery-server
 server.port=8761
+# not to register eureka server with registry
 eureka.client.register-with-eureka=false
+# disable registry fetch
 eureka.client.fetch-registry=false
